--- a/env.example
+++ b/env.example
@@ -3,6 +3,7 @@ RAILS_ENV=production
 DISCOURSE_VERSION=1.7.1
 GEM_SOURCE=https://mirrors.tuna.tsinghua.edu.cn/rubygems/
 
+UNICORN_PORT=3000
 POSTGRES_USER=discourse
 POSTGRES_PASSWORD=discourse
 
