--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,18 @@
-/app/discourse
-/volumes
+
+!.keep
+/app/source/discourse/*
+/volumes/*
+!/volumes/nginx
 .env
+
+*.tmp
+*.bak
+*.swp
+*.orig
+Thumbs.db
+Desktop.ini
+.DS_Store
+._*
+.Spotlight-V100
+.Trashes
+*~
