--- a/volumes/nginx/nginx.conf
+++ b/volumes/nginx/nginx.conf
@@ -1,6 +1,7 @@
 user www-data;
 worker_processes auto;
-pid /run/nginx.pid;
+# pid /run/nginx.pid;
+daemon off;
 
 events {
 	worker_connections 768;
