--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -32,8 +32,11 @@ services:
             - /etc/localtime:/etc/localtime:ro
             - ./volumes/discourse/public:/var/www/discourse/public
             - ./volumes/discourse/plugins:/var/www/discourse/plugins
-            - ./volumes/nginx:/etc/nginx
+            - ./volumes/nginx/nginx.conf:/etc/nginx/nginx.conf
+            - ./volumes/nginx/conf.d/discourse.conf:/etc/nginx/conf.d/discourse.conf
         links:
             - redis
             - db
             - mail
+        ports:
+            - "10080:80"
