sync env.example with..env

--- a/env.example
+++ b/env.example
@@ -4,9 +4,18 @@ DISCOURSE_VERSION=1.7.1
 GEM_SOURCE=https://mirrors.tuna.tsinghua.edu.cn/rubygems/
 
 UNICORN_PORT=3000
+UNICORN_WORKERS=1
+UNICORN_SIDEKIQS=1
+
+RUBY_GLOBAL_METHOD_CACHE_SIZE=131072
+RUBY_GC_HEAP_GROWTH_MAX_SLOTS=40000
+RUBY_GC_HEAP_INIT_SLOTS=400000
+RUBY_GC_HEAP_OLDOBJECT_LIMIT_FACTOR=1.5
+
 POSTGRES_USER=discourse
 POSTGRES_PASSWORD=discourse
 
+DISCOURSE_DEVELOPER_EMAILS=leo@hidocker.io
 DISCOURSE_REDIS_HOST=redis
 DISCOURSE_REDIS_PORT=6379
 DISCOURSE_DB_HOST=db
