--- a/env.example
+++ b/env.example
@@ -15,7 +15,8 @@ RUBY_GC_HEAP_OLDOBJECT_LIMIT_FACTOR=1.5
 POSTGRES_USER=discourse
 POSTGRES_PASSWORD=discourse
 
-DISCOURSE_DEVELOPER_EMAILS=leo@hidocker.io
+DISCOURSE_HOSTNAME=meta.examble.com
+DISCOURSE_DEVELOPER_EMAILS=account@domain.com
 DISCOURSE_REDIS_HOST=redis
 DISCOURSE_REDIS_PORT=6379
 DISCOURSE_DB_HOST=db
@@ -23,6 +24,5 @@ DISCOURSE_DB_PORT=5432
 DISCOURSE_DB_USERNAME=discourse
 DISCOURSE_DB_PASSWORD=discourse
 DISCOURSE_DB_NAME=discourse
-DISCOURSE_SMTP_HOST=mail
 DISCOURSE_SMTP_ADDRESS=mail
 DISCOURSE_SMTP_PORT=1025
