--- a/env.example
+++ b/env.example
@@ -1,7 +1,35 @@
 RAILS_ENV=production
 
+###
+# IMPORTANT environment MUST setting carefully in production server
+###
+
+# POSTGRES_USER MUST same as DISCOURSE_DB_USERNAME
+POSTGRES_USER=discourse
+# POSTGRES_PASSWORD MUST same as DISCOURSE_DB_PASSWORD
+POSTGRES_PASSWORD=discourse
+
+DISCOURSE_DB_USERNAME=discourse
+DISCOURSE_DB_PASSWORD=discourse
+
+DISCOURSE_DB_HOST=db
+DISCOURSE_DB_PORT=5432
+DISCOURSE_DB_NAME=discourse
+DISCOURSE_SMTP_ADDRESS=mail
+DISCOURSE_SMTP_PORT=1025
+
+DISCOURSE_HOSTNAME=meta.examble.com
+DISCOURSE_DEVELOPER_EMAILS=account@domain.com
+DISCOURSE_REDIS_HOST=redis
+DISCOURSE_REDIS_PORT=6379
+
+###
+# ends important enviroment settings
+###
+
 DISCOURSE_VERSION=1.7.1
-GEM_SOURCE=https://mirrors.tuna.tsinghua.edu.cn/rubygems/
+# Uncomment next line to fast gem install & bundle install for chinese user
+# GEM_SOURCE=https://mirrors.tuna.tsinghua.edu.cn/rubygems/
 
 UNICORN_PORT=3000
 UNICORN_WORKERS=1
@@ -12,17 +40,3 @@ RUBY_GC_HEAP_GROWTH_MAX_SLOTS=40000
 RUBY_GC_HEAP_INIT_SLOTS=400000
 RUBY_GC_HEAP_OLDOBJECT_LIMIT_FACTOR=1.5
 
-POSTGRES_USER=discourse
-POSTGRES_PASSWORD=discourse
-
-DISCOURSE_HOSTNAME=meta.examble.com
-DISCOURSE_DEVELOPER_EMAILS=account@domain.com
-DISCOURSE_REDIS_HOST=redis
-DISCOURSE_REDIS_PORT=6379
-DISCOURSE_DB_HOST=db
-DISCOURSE_DB_PORT=5432
-DISCOURSE_DB_USERNAME=discourse
-DISCOURSE_DB_PASSWORD=discourse
-DISCOURSE_DB_NAME=discourse
-DISCOURSE_SMTP_ADDRESS=mail
-DISCOURSE_SMTP_PORT=1025
