ignore files except gitkeep

--- a/.gitignore
+++ b/.gitignore
@@ -1,15 +1,4 @@
-!.keep
-/app/source/*
-!/volumes/
-
-/volumes/*
-!/volumes/nginx
-/volumes/nginx/**/*.conf
-
-!/volumes/discourse/**/.keep
-!/volumes/discourse/**/**/.keep
 .env
-
 *.tmp
 *.bak
 *.swp
@@ -21,3 +10,33 @@ Desktop.ini
 .Spotlight-V100
 .Trashes
 *~
+
+app/source/*
+
+!volumes
+volumes/*
+!volumes/discourse
+volumes/discourse/*
+
+!volumes/discourse/plugins
+volumes/discourse/plugins/*
+!volumes/discourse/plugins/.gitkeep
+
+!volumes/discourse/public
+volumes/discourse/public/*
+!volumes/discourse/public/assets
+volumes/discourse/public/assets/*
+!volumes/discourse/public/assets/.gitkeep
+
+!volumes/discourse/tmp
+volumes/discourse/tmp/*
+!volumes/discourse/tmp/run
+volumes/discourse/tmp/run/*
+!volumes/discourse/tmp/run/.gitkeep
+
+!volumes/nginx
+volumes/nginx/*
+!volumes/nginx/nginx.conf.example
+!volumes/nginx/conf.d
+volumes/nginx/conf.d/*
+!volumes/nginx/conf.d/discourse.conf.example
