--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -25,7 +25,7 @@ services:
     
     app:
         build: app
-        image: leopku/discourse:1.3.10-official
+        # image: leopku/discourse:1.3.10-official
         env_file:
             - .env
         volumes: 
