--- a/env.example
+++ b/env.example
@@ -1,3 +1,4 @@
+# Copy this file to .env and add any enviroment variable 
 RAILS_ENV=production
 
 ###
@@ -39,4 +40,3 @@ RUBY_GLOBAL_METHOD_CACHE_SIZE=131072
 RUBY_GC_HEAP_GROWTH_MAX_SLOTS=40000
 RUBY_GC_HEAP_INIT_SLOTS=400000
 RUBY_GC_HEAP_OLDOBJECT_LIMIT_FACTOR=1.5
-
