downgrade postgres to 9.5.5

--- a/env.example
+++ b/env.example
@@ -18,9 +18,11 @@ DISCOURSE_DB_PORT=5432
 DISCOURSE_DB_NAME=discourse
 DISCOURSE_SMTP_ADDRESS=mail
 DISCOURSE_SMTP_PORT=1025
+DISCOURSE_SMTP_USER_NAME="noreply@yourdomain.com"
+DISCOURSE_SMTP_PASSWORD=""
 
 DISCOURSE_HOSTNAME=meta.examble.com
-DISCOURSE_DEVELOPER_EMAILS=account@domain.com
+DISCOURSE_DEVELOPER_EMAILS=account@yourdomain.com
 DISCOURSE_REDIS_HOST=redis
 DISCOURSE_REDIS_PORT=6379
 
